--- a/hosei/package.json
+++ b/hosei/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "buttercms": "^1.2.9",
     "core-js": "^3.8.3",
+    "express": "^4.18.1",
     "firebase": "^9.9.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
