--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "express": "^4.18.1",
     "firebase": "^9.9.0",
+    "microcms-js-sdk": "^2.3.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vue-side-catalog": "^2.0.0",
