--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@mdi/font": "^7.2.96",
     "@mdi/js": "^7.2.96",
     "buttercms": "^1.2.9",
+    "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
     "firebase": "^9.9.0",
     "microcms-js-sdk": "^2.3.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-scrollto": "^2.20.0",
     "vue-side-catalog": "^2.0.0",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
